config: setup ant design

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "d3-zoom": "^3.0.0",
+    "dagre-compound": "^0.0.13",
+    "monaco-editor": "^0.34.1",
     "ng-zorro-antd": "^14.2.1",
+    "ng-zorro-schematics": "^1.0.0-alpha.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,6 +31,8 @@
     "@angular-devkit/build-angular": "^14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/d3-selection": "^3.0.3",
+    "@types/d3-zoom": "^3.0.1",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.1.0",
